# Xadeus-QQ-MCP

./: .gitignore  Dockerfile  README.md  SKILL.md  docker-compose.sample.yml  glama.json  opencode_mcp.json  pyproject.toml  qq3838_agent.py  quickstart.ps1  restart.ps1  setup.py  start_mcp.bat
napcat/: README.md
screenshot_test/: chat_debug.html  chat_template.html  test_real.py  test_render.py
scripts/: install-linux.sh  setup-linux.sh  setup-windows.ps1  start-docker-linux.sh  start-docker-windows.ps1  test-mcp-linux.py
src/qq_agent_mcp/: __main__.py  config.py  context.py  onebot.py  renderer.py  server.py  timer.py  tools.py  wake.py  wake_config.json  wake_rules.json
src/qq_agent_mcp/templates/: chat.html
tests/: test_chunk.py  test_mcp.py  test_send.py  test_split_tag.py
